Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .DS_Store
 tools/data/
+
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
